<resources>
    <string name="app_name">Book Review</string>
    <string name="email_id">Email id</string>
    <string name="password">Password</string>
    <string name="region">Region</string>
    <string name="create_account">CREATE ACCOUNT</string>
    <string name="logout">Logout</string>
    <string name="log_in">Log In</string>
    <string name="create_new_account">Create A New Account</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login_text">Login To Your Account</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="text_recognition_key">1fa085d18d0745c29b56fd8724de4d87</string>
    <string name="text_recognition_api">
        https://westcentralus.api.cognitive.microsoft.com/vision/v1.0
    </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
